# ChangeLog for app-portage/eix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.291 2009/06/26 12:50:00 darkside Exp $

*eix-0.16.2 (26 Jun 2009)

  26 Jun 2009; Jeremy Olexa <darkside@gentoo.org> -eix-0.15.7.ebuild,
  +eix-0.16.2.ebuild:
  Minor version bump, default to SAVE_WORLD=true and build system changes

  19 Jun 2009; Brent Baude <ranger@gentoo.org> eix-0.16.0.ebuild:
  stable ppc64, bug 273555

  16 Jun 2009; Raúl Porcel <armin76@gentoo.org> eix-0.16.0.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #273555

  13 Jun 2009; Jeremy Olexa <darkside@gentoo.org> eix-0.16.0.ebuild:
  amd64 stable, bug 273555

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org> eix-0.16.0.ebuild:
  stable x86, bug 273555

  10 Jun 2009; Jeroen Roovers <jer@gentoo.org> eix-0.16.0.ebuild:
  Stable for HPPA (bug #273555).

  10 Jun 2009; Ferris McCormick <fmccor@gentoo.org> eix-0.16.0.ebuild:
  Sparc stable, bug #273555.

*eix-0.16.1 (09 Jun 2009)

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org> +eix-0.16.1.ebuild:
  Version bump, now supports overlay metadata

  22 May 2009; Peter Alfredsen <loki_val@gentoo.org> eix-0.16.0.ebuild,
  +files/eix-0.16.0-glibc-2.10.patch:
  Fix glibc-2.10 build, bug 270492. ++ to Martin Väth
  <vaeth@mathematik.uni-wuerzburg.de> for the patch.

  08 May 2009; Jeremy Olexa <darkside@gentoo.org> -eix-0.15.5.ebuild,
  -eix-0.15.6.ebuild:
  remove old, next stable candidate is 0.15.7

*eix-0.16.0 (08 May 2009)

  08 May 2009; Jeremy Olexa <darkside@gentoo.org> metadata.xml,
  +eix-0.16.0.ebuild:
  Version bump, highlights include new USE flags and internal changes

*eix-0.15.7 (20 Apr 2009)

  20 Apr 2009; Jeremy Olexa <darkside@gentoo.org> -eix-0.15.2.ebuild,
  +eix-0.15.7.ebuild:
  version bump, highlight: set use flag support

  28 Mar 2009; Jeremy Olexa <darkside@gentoo.org> eix-0.15.6.ebuild:
  add ~m68k, they snuck up on me

*eix-0.15.6 (28 Mar 2009)
