@@ -4,9 +4,11 @@ DIST eix-0.15.4.tar.lzma 276673 RMD160 8c2ffc1e7fbf2802eb8073984fc28011532abf0a 
 DIST eix-0.16.0.tar.lzma 469113 RMD160 0faa7b79f87a023bbc9f94a33d71faa55426cbb0 SHA1 92ea90ed10cb6b70d070e1d313666e1308d86bcb SHA256 335cce35962de621811b4e73afa6a443e65f3a87cbff14fd0d4e111df2aa7112
 DIST eix-0.16.1.tar.lzma 474164 RMD160 a36827bba4318926645d4b0e6c34978964913112 SHA1 6976cede8d2ec522f0a03ce622aa9f93934ef690 SHA256 f372f30fed659c07dfa513d7c92d6e06901bcca314480b7ad85172fc0fca2f5a
 DIST eix-0.16.2.tar.lzma 477347 RMD160 b3e10ccb98bb4a4a886bd2ac0939fe6e952bae0c SHA1 f7dea55ca4c3d99d0f447f8d50cedeb5a474a94c SHA256 93091cfd30f7064a92a925d84306f9ad6a795c4abfef0084511c6c3d42e5c500
+DIST eix-0.17.0.tar.lzma 483935 RMD160 7e384df2fbc32484f57fae916b4b2fa4be19d133 SHA1 3d7a786e8db3e84d935a1ef6e87565064aaf1bf1 SHA256 f4904662a6177d7e11f79fa69427d164392ca8563b3886be30f1c06c13277912
 EBUILD eix-0.15.4.ebuild 1708 RMD160 74dceab42d5affde23fbb1c76dc2a31ffc512989 SHA1 9219f5c22908ad43eb42bffa77ddd8970482bbdb SHA256 513ce81e2f99c88a6bdd8100475d6aad746b0e03f5387ff9f5ca10f554e08b1e
 EBUILD eix-0.16.0.ebuild 1923 RMD160 ae2610055d57c8d74db638ef9cb223f70b791bad SHA1 1201d915a76787caf375a1640799febff043beda SHA256 c7d8ef826d505ee46d74b5870b7e5dae2e93a976e7b8fc12391d0bee499226f0
 EBUILD eix-0.16.1.ebuild 2479 RMD160 58c0acbf1643b518db329fdbd7cb565db37ce1be SHA1 8859f5ca2dcbb3f687bb56d9149141c1fbe5419e SHA256 29118604fc204cd980cd9f7ab7bf3ec89d0370615dfba95261a4ccd276dd50a0
 EBUILD eix-0.16.2.ebuild 2623 RMD160 50465c48986bb8e2f7b9b05771c51ae852ce38a1 SHA1 6b224ce0477b66c6d633a62837c65627852a9cb1 SHA256 be0109087d194a56d282d794f5db68842517fce92a6bbb34a52f1767ac68c6c2
-MISC ChangeLog 35792 RMD160 22bb95e89ee6bceefb28d1f77b0812cf0a9f11e6 SHA1 7ef8dc3df2b0437579e6724e6f8e63fb813b4877 SHA256 0d5d039cca681e3f4abff7bb882dc88d7f7f02cd3ce56eff753371132c9ae582
-MISC metadata.xml 987 RMD160 94bf3919917fcb3d5ac5f8852282a1ef2355243e SHA1 c1ce835bfc2a631fe598715cfc3a086614f8b686 SHA256 6000899d7e4d56ce006d88f58cf88cfebc4589544fa72469036ef73174d2e67f
+EBUILD eix-0.17.0.ebuild 2660 RMD160 a4dc446ad3b332c06e9d47188378fb1d3bf0ce7f SHA1 29d725a708ab382fb946410fd0f0b3c7e8081b6c SHA256 86f29f764af9ac88e60fd87c6b2137c9b45d1a7f1cc2e830394594abd090e006
+MISC ChangeLog 36123 RMD160 327ff60496e28ce75fb4053822fb62c2be6a5d2c SHA1 d79d81a23025c45e9f2dfd415d97b2ef2f53f2c8 SHA256 9296009039e29c7b26201790f6efc1bbbf3a030abf97213e17b4a8f76bbc726d
+MISC metadata.xml 1111 RMD160 20d23cc0d05368b5e2db8a9890372c99f937d4c2 SHA1 739478cad5134206c555b7a0681528e6bb97e778 SHA256 c080791156525d25785797cf97cadcb93956536abae42c813ffbfb289b613830
