@@ -1,6 +1,16 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.291 2009/06/26 12:50:00 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.293 2009/07/06 18:09:44 darkside Exp $
+
+  06 Jul 2009; Jeremy Olexa <darkside@gentoo.org> eix-0.17.0.ebuild:
+  style changes, no need for a local variable
+
+*eix-0.17.0 (06 Jul 2009)
+
+  06 Jul 2009; Jeremy Olexa <darkside@gentoo.org> metadata.xml,
+  +eix-0.17.0.ebuild:
+  Version bump, add 'deprecated' USE flag to enable deprecated executable
+  names. Other small fixes
 
 *eix-0.16.2 (26 Jun 2009)
 
